--- a/public/cats.css
+++ b/public/cats.css
@@ -69,11 +69,39 @@ header {
   text-align: center;
 }
 
-
 main {
   flex: 1;
 
   padding: 0.5rem;
+}
+
+.cats-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.5rem;
+  grid-column: span 12;
+
+  border-radius: 0.5rem;
+  margin: auto;
+  width: 100%;
+}
+
+.cat-card {
+  text-align: center;
+
+  background-color: #eee;
+
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 0.1rem solid black;
+}
+
+.cat-card h2 {
+  color: black;
+  text-align: center;
+
+  margin-top: 0;
 }
 
 .cat-card img {
@@ -84,6 +112,29 @@ main {
 
   display: block;
   margin: 0 auto;
+}
+
+.cat-card p {
+  color: black;
+  word-wrap: break-word;
+  text-align: left;
+
+  line-height: 1.5;
+}
+
+.subscribe-btn {
+  text-decoration: underline;
+  color: blue;
+
+  padding: 0;
+  border: none;
+
+  cursor: pointer;
+}
+
+.cat-card a {
+  color: blue;
+  font-weight: bold;
 }
 
 footer {
