--- a/public/cats.css
+++ b/public/cats.css
@@ -69,6 +69,54 @@ header {
   text-align: center;
 }
 
+.hamburger-button {
+  display: none;
+
+  background: none;
+
+  border: none;
+
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.menu {
+  grid-column: 1 / 13;
+  text-align: center;
+}
+
+.menu-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-list li a {
+  text-decoration: underline;
+  color: blue;
+
+  padding: 0.5rem 1rem;
+}
+
+.menu-list li a:hover {
+  background-color: dodgerblue;
+
+  color: white;
+}
+
+.menu-list li a.active {
+  background-color: dodgerblue;
+
+  color: white;
+
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
 main {
   flex: 1;
 
