--- a/public/cats.css
+++ b/public/cats.css
@@ -200,3 +200,81 @@ footer a {
   text-decoration: underline;
   color: blue;
 }
+
+/* Modal */
+#subscribe-modal {
+  text-align: center;
+
+  background-color: white;
+
+  padding: 1rem;
+  border: 0.1rem solid black;
+}
+
+#subscribe-modal::backdrop {
+  background-color: rgb(0 0 0 / 0.7);
+}
+
+.required-indicator {
+  font-style: italic;
+}
+
+.form-group {
+  text-align: left;
+
+  padding: 0.5rem;
+}
+
+input {
+  width: 100%;
+}
+
+.error-message {
+  color: red;
+  font-style: italic;
+
+  margin-bottom: 0.5rem;
+}
+
+.error-message.visible {
+  display: block;
+}
+
+input.error {
+  border-color: red;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+
+  margin-top: 1rem;
+}
+
+#submit-btn {
+  background-color: lime;
+
+  color: black;
+
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid black;
+
+  cursor: pointer;
+
+  font-size: 1.2rem;
+}
+
+#cancel-btn {
+  background-color: lightcoral;
+
+  color: black;
+
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid black;
+
+  cursor: pointer;
+
+  font-size: 1.2rem;
+}
